# Kartavya_Business_Analytics2025

./: .gitignore  Analytics_Colab_CEOs_—_START.ipynb  Class_Assignments\week10\Week_10_Session_2.ipynb  LICENSE  Python_Basics_Business_Students.ipynb  README.md  WORKFLOW_IMPROVEMENTS.md  Week_1_S2_Pandas_DataFrames_START.ipynb  Week_2_1_SEMMA_eCommerce_—_START.ipynb  Week_3_Catch_Up_BAN.ipynb  Week_3_In_class_BAN.ipynb  Week_3_Session_1_Confidence_Intervals.ipynb  Week_4_Session_2.ipynb  convert_all_notebooks.py  index.html  nbprint.py  pyproject.toml
A1/: ASSIGNMENT_CHECKLIST.md  ASSIGNMENT_FIXES_COMPLETE.md  CHANGES_COMPLETED.md  CLEANUP_FINAL.md  CLEANUP_SUMMARY.md  COLD_START_FIX_COMPLETE.md  COLOR_SYSTEM.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_DOCUMENTATION_SUMMARY.md  COMPREHENSIVE_FIX_COMPLETE.md  CRAMERS_V_REMOVAL_COMPLETE.md  CRITICAL_PART2_FIX_TASKLIST.md  DASHBOARD_README.md  DELETE_LOG.md  DESIGN_SYSTEM_REFERENCE.md  DESIGN_UPGRADE_COMPLETE.md  DISPLAY_IMPROVEMENTS.md  DUAL_PURPOSE_PROJECT.md  FINAL_FIX_SUMMARY.md  FINAL_REPORT.md  FINAL_SUBMISSION_ENHANCEMENTS.md  FINAL_SUMMARY.md  Final_Hypothesis_testing.ipynb  HEROKU_DEPLOYMENT.md  Home.py  IMAGE_FIXES_COMPLETE.md  INTERACTIVE_ANALYSIS_GUIDE.md  INTERACTIVE_ENHANCEMENT_COMPLETE.md  PART2_ENHANCEMENTS_SUMMARY.md  PART2_FIX_PROGRESS.md  PART2_RECONSTRUCTION_COMPLETE.md  PHASE1_QUALITY_IMPROVEMENTS_COMPLETE.md  PHASE1_SESSION_SUMMARY.md  PRE_SUBMISSION_CHANGES.md  PUSH_READY_CHECKLIST.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_DESIGN_UPGRADE.md  READY_TO_PUSH.md  (+14 more)
A1/.github/: copilot-instructions.md
A1/.streamlit/: config.toml
A1/archives/: REBRANDING_SUMMARY.md  all_markdowns_archive.md
A1/co-emissions-per-capita/: co-emissions-per-capita.metadata.json  readme.md
A1/gdp-per-capita-worldbank-constant-usd/: gdp-per-capita-worldbank-constant-usd.csv  gdp-per-capita-worldbank-constant-usd.metadata.json  readme.md
A1/net-zero-targets/: net-zero-targets.metadata.json  readme.md
A1/outputs/: .gitignore
A1/pages/: 1_📊_Part_1.py  2_🎯_Part_2.py  3_🔬_Methodology.py  Analysis.py  Data_Explorer.py  Experiment.py.bak  Experiment.py.fstrings.bak  Main.py.bak
A1/scripts/: archive_markdowns.py
A1/templates/: custom_report.tpl
A1/tools/: ast_fstring_converter.py  fix_fstrings.py  force_convert_all_fstrings.py
A1/utils/: __init__.py  analysis.py  data_loader.py  splash.py  styling.py
A2/: Final.ipynb  README_A2.md  (+16 more)
(+63 files in other folders)
