[project]
name = "carbonseer"
version = "0.1.0"
description = "CarbonSeer - Carbon Risk Analytics Dashboard for GDP, CO₂ Emissions, and Net-Zero Targets Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core data science
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    # Streamlit and enhancements
    "streamlit>=1.50.0",
    "streamlit-lottie>=0.0.5",
    "streamlit-extras>=0.4.0",
    # Jupyter and PDF export
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "nbconvert>=7.16.0",
    "nbformat>=5.9.0",
    # PDF rendering requirements
    "pypandoc>=1.13",
    "pillow>=10.0.0",
    "rio-ui>=0.11.1",
    "statsmodels>=0.14.5",
    "weasyprint>=66.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "ipython>=8.20.0",
]

[tool.uv]
dev-dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "plotly",
    "streamlit",
    "streamlit-lottie",
    "streamlit-extras",
    "pillow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]
